--- a/_includes/socials.html
+++ b/_includes/socials.html
@@ -1,5 +1,11 @@
-<ul class="social-container">
-	{% for socials in site.data.socials %}
-	  <li class="right"><a href="{{ socials.href }}"><span class="icon-{{ socials.title }} socials"></span></a></li>
-	{% endfor %}
-</ul> 
+{% if site.data.social-media %}
+<div id="socials">
+    {% assign sm = site.data.socials %}
+    {% for entry in site.data.socials %}
+    {% assign key = entry | first %}
+        {% if sm[key].id %}
+            <a href="{{ sm[key].href }}"></a>
+    {% endif %}
+    {% endfor %}
+</div>
+{% endif %}
