--- a/_includes/socials.html
+++ b/_includes/socials.html
@@ -4,7 +4,7 @@
     {% for entry in site.data.socials %}
     {% assign key = entry | first %}
         {% if sm[key].id %}
-            <a href="{{ sm[key].href }}"></a>
+            <a href="{{ sm[key].href }}{{ sm[key].id }}" title="{{ sm[key].title }}" rel="me"><i class="fa {{ sm[key].fa-icon }}"></i></a>
     {% endif %}
     {% endfor %}
 </div>
