--- a/_includes/socials.html
+++ b/_includes/socials.html
@@ -1,4 +1,4 @@
-{% if site.data.social-media %}
+{% if site.data.socials %}
 <div id="socials">
     {% assign sm = site.data.socials %}
     {% for entry in site.data.socials %}
