--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <!-- page.url == {{ page.url }} -->
     <!-- page.url | absolute_url == {{ page.url | absolute_url }} -->
 
-    <!--{% include sidebar.html %}-->
+    {% include sidebar.html %}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper content container">
